More comments, some simplification.

--- a/opp/tests/opp.html
+++ b/opp/tests/opp.html
@@ -12,9 +12,9 @@
 						// whitespace
 						[/\s+/],
 						// id
-						[/[A-Za-z_]\w*/, "id", true],
+						[/[A-Za-z_]\w*/, "id"],
 						// number
-						[/\d+(\.\d*)?([eE][+-]?\d+)?/, "num", true],
+						[/\d+(\.\d*)?([eE][+-]?\d+)?/, "num"],
 						// operator
 						[/\+|\-|\/|\*|\(|\)|\,/, true],
 						// comment
