Improved the definition of a number.

--- a/opp/tests/opp.html
+++ b/opp/tests/opp.html
@@ -14,7 +14,7 @@
 						// id
 						[/[A-Za-z_]\w*/, "id"],
 						// number
-						[/\d+(\.\d*)?([eE][+-]?\d+)?/, "num"],
+						[/\d+(?:\.\d*)?(?:[eE][+-]?\d+)?|\.\d+(?:[eE][+-]?\d+)?/, "num"],
 						// operator
 						[/\+|\-|\/|\*|\(|\)|\,/, true],
 						// comment
